# final_game_tech

./: .gitattributes  .gitignore  LICENSE  README.md  final_dynamic_opengl.h  final_dynamic_opengl.hpp  final_font.h  final_json.h  final_memory.h  final_net.h  final_opengl.hpp  final_platform_layer.docs  final_platform_layer.doxygen  final_platform_layer.h  final_platform_layer.hpp  final_tiletrace.hpp  final_xml.h
apps/: apps.sln  clear.bat  network.sln
apps/EnumToSwitchConverter/: EnumToSwitchConverter.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
apps/FontRendering/: fontrendering.vcxproj  fontrendering.vcxproj.filters  main.cpp
apps/OpenGLExtParser/: OpenGLExtParser.vcxproj  OpenGLExtParser.vcxproj.GhostDoc.xml  OpenGLExtParser.vcxproj.filters  main.cpp
apps/ProtParser/: FunctionTokenizer.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Preset.cs  Program.cs  ProtParser.csproj  ProtParser.sln  PrototypeGenerator.cs
apps/Win32WindowTest/: Win32WindowTest.vcxproj  main.cpp
apps/data/: gl.h
apps/networkclient/: client.c  networkclient.vcxproj  networkclient.vcxproj.filters
apps/networkserver/: networkserver.vcxproj  networkserver.vcxproj.filters  server.c
apps/staticdatamaker/: main.c  staticdatamaker.vcxproj
assets/: final_game_tech.pdn
demos/: build_with_clang.bat  clang.bat  clang_x64_debug.bat  clang_x64_release.bat  clear.bat  clear.sh  compile.sh  demos.sln  demos_final_dynamic_opengl.sln  demos_final_memory.sln  demos_final_platform_layer.sln  demos_final_platform_layer_premake5.lua  demos_final_tiletrace.sln  demos_final_xml.sln  memorycheck.sh
demos/FMEM_Test/: CMakeLists.txt  FMEM_Test.vcxproj  FMEM_Test.vcxproj.filters  Makefile  fmem_test.c
demos/FOGL_Test/: CMakeLists.txt  FOGL_Test.vcxproj  FOGL_Test.vcxproj.filters  Makefile  fogl_test.c  fogl_test.cpp  (+1 more)
demos/FPL_Audio/: CMakeLists.txt  FPL_Audio.vcxproj  FPL_Audio.vcxproj.filters  Makefile  audiosystem.c  audiosystem.h  fpl_audio.c  fpl_audio.cpp  main.cpp  waveloader.c  waveloader.h
demos/FPL_Crackout/: CMakeLists.txt  FPL_Crackout.vcxproj  FPL_Crackout.vcxproj.filters  Makefile  fpl_crackout.cpp  game.cpp  game.h  premake5.lua  utils.h
demos/FPL_Crackout/assets/: ball.pdn  bg.pdn  breakout_tileset.txt  bricks.pdn  frame.pdn  paddle.pdn
demos/FPL_Crackout/data/: licenses.txt
demos/FPL_Crackout/dependencies/Box2D/: Box2D.cpp
demos/FPL_Crackout/dependencies/Box2D/Common/: b2Timer.cpp
demos/FPL_Crackout/dependencies/Box2D_recent/Collision/: b2BroadPhase.cpp  b2BroadPhase.h  b2CollideCircle.cpp  b2CollideEdge.cpp  b2CollidePolygon.cpp  b2Collision.cpp  b2Collision.h  b2Distance.cpp  b2Distance.h  b2DynamicTree.cpp  b2DynamicTree.h  b2TimeOfImpact.cpp  b2TimeOfImpact.h
demos/FPL_Crackout/dependencies/Box2D_recent/Collision/Shapes/: b2ChainShape.cpp  b2ChainShape.h  b2CircleShape.cpp  b2CircleShape.h  b2EdgeShape.cpp  b2EdgeShape.h  b2PolygonShape.cpp  b2PolygonShape.h  b2Shape.h
demos/FPL_Crackout/dependencies/Box2D_recent/Common/: b2BlockAllocator.cpp  b2BlockAllocator.h  b2Draw.cpp  b2Draw.h  b2GrowableStack.h  b2Math.cpp  b2Math.h  b2Settings.cpp  b2Settings.h  b2StackAllocator.cpp  b2StackAllocator.h  b2Timer.cpp  b2Timer.h
demos/FPL_Crackout/dependencies/Box2D_recent/Dynamics/: b2Body.cpp  b2Body.h  b2ContactManager.cpp  b2ContactManager.h  b2Fixture.cpp  b2Fixture.h  b2Island.cpp  b2Island.h  b2TimeStep.h  b2World.cpp  b2World.h  b2WorldCallbacks.h
demos/FPL_Crackout/dependencies/Box2D_recent/Dynamics/Contacts/: b2ChainAndCircleContact.cpp  b2ChainAndCircleContact.h  b2ChainAndPolygonContact.cpp  b2ChainAndPolygonContact.h  b2CircleContact.cpp  b2CircleContact.h  b2Contact.cpp  b2Contact.h  b2ContactSolver.cpp  b2ContactSolver.h  b2EdgeAndCircleContact.cpp  b2EdgeAndCircleContact.h  b2EdgeAndPolygonContact.cpp  b2EdgeAndPolygonContact.h  b2PolygonAndCircleContact.cpp  b2PolygonAndCircleContact.h  b2PolygonContact.cpp  b2PolygonContact.h
demos/FPL_Crackout/dependencies/Box2D_recent/Dynamics/Joints/: b2DistanceJoint.cpp  b2DistanceJoint.h  b2FrictionJoint.cpp  b2FrictionJoint.h  b2GearJoint.cpp  b2GearJoint.h  b2Joint.h  b2MotorJoint.cpp  b2MotorJoint.h  b2MouseJoint.cpp  b2MouseJoint.h  b2PrismaticJoint.cpp  b2PrismaticJoint.h  b2PulleyJoint.cpp  b2PulleyJoint.h  b2RevoluteJoint.cpp  b2RevoluteJoint.h  b2RopeJoint.cpp  b2RopeJoint.h  b2WeldJoint.cpp  b2WeldJoint.h  b2WheelJoint.cpp  b2WheelJoint.h
demos/FPL_Crackout/dependencies/Box2D_recent/Rope/: b2Rope.cpp  b2Rope.h
demos/FPL_ImGui/: CMakeLists.txt  FPL_ImGui.kdev4  FPL_ImGui.vcxproj  FPL_ImGui.vcxproj.filters  Makefile  fpl_imgui.cpp  imgui.ini  main.cpp  premake5.lua
demos/FPL_NBodySimulation/: CMakeLists.txt  FPL_NBodySimulation.vcxproj  FPL_NBodySimulation.vcxproj.filters  Makefile  app.cpp  app.h  base.h  chart.h  demo1.cpp  demo1.h  demo2.cpp  demo2.h  demo3.cpp  demo3.h  demo4.cpp  demo4.h  final_platform_layer.cpp  font.h  fonts.h  fpl_nbodysimulation.cpp  includes.h  main.cpp  memory.h  premake5.lua  pseudorandom.h  render.h  simulation.h  sph.h  threading.h  utils.h  vecmath.h
demos/FPL_OpenGL/: CMakeLists.txt  CMakeSettings.json  FPL_OpenGL.vcxproj  FPL_OpenGL.vcxproj.filters  Makefile  fpl_opengl.c  fpl_opengl.cpp  main.c  main.cpp  premake5.lua
demos/FPL_OpenGL/dependencies/glew/lib/Win32/: glew32.exp  glew32.lib  glew32s.lib
demos/FPL_OpenGL/dependencies/glew/lib/x64/: glew32.exp  glew32.lib  glew32s.lib
demos/FPL_Towadev/: CMakeLists.txt  FPL_Towadev.vcxproj  FPL_Towadev.vcxproj.filters  Makefile  fpl_towadev.cpp  fpl_towadev.h  premake5.lua
demos/FPL_Towadev/assets/: arrow.pdn  arrow_small.pdn  entities.pdn  glow.pdn  ground_tileset.pdn  sign.pdn  sign_spawn.pdn  way.pdn  way_cross.pdn  way_edge.pdn  way_tileset.pdn  way_vertical.pdn  way_vertical_end.pdn  waypoint.pdn
demos/FPL_Towadev/data/: level1.tmx
demos/FPL_Towadev/data/levels/: creeps.xml  level1.tmx  level1.txt  towers.xml  waves.xml
docs/: ffplay.c  fpl_win32_functions.txt  win32_functions.txt
docs_fpl/: alsa_functions.txt  buried_code.txt  prompts_documentation_improvement.txt  resources.txt
(+770 files in other folders)
